Zeige /admin auf über localhost und /play sonst

--- a/CountdownGame.cabal
+++ b/CountdownGame.cabal
@@ -28,6 +28,7 @@ executable CountdownGame
                      , persistent
                      , persistent-template
                      , persistent-sqlite
+                     , network
                      , wai-middleware-static
                      , wai-extra
                      , time
