Inmemory Repositories für die angemeldeten Spieler

--- a/CountdownGame.cabal
+++ b/CountdownGame.cabal
@@ -17,6 +17,8 @@ executable CountdownGame
   -- other-modules:       
   -- other-extensions:    
   build-depends:       base >=4.8 && <4.9
+                     , transformers
+                     , containers
                      , wai
                      , warp
                      , http-types
