--- a/CountdownGame.cabal
+++ b/CountdownGame.cabal
@@ -37,5 +37,42 @@ executable CountdownGame
                      , wai-extra
                      , cookie
                      , time
+                     , parsec
   hs-source-dirs:      src
   default-language:    Haskell2010
+
+test-suite CountdownTests
+  type:
+      exitcode-stdio-1.0
+  ghc-options:
+      -Wall
+  hs-source-dirs:
+      test
+    , src
+  main-is:
+      Spec.hs
+  default-language:    
+      Haskell2010
+  build-depends:       base >=4.8 && <4.9
+                     , transformers
+                     , containers
+                     , aeson==0.10.0.0
+                     , wai
+                     , warp
+                     , http-types
+                     , resourcet
+                     , scotty
+                     , text
+                     , bytestring
+                     , blaze-html
+                     , blaze-builder
+                     , persistent
+                     , persistent-template
+                     , persistent-sqlite
+                     , network
+                     , wai-middleware-static
+                     , wai-extra
+                     , cookie
+                     , time
+                     , parsec
+                     , hspec   == 2.*
