--- a/CountdownGame.cabal
+++ b/CountdownGame.cabal
@@ -38,6 +38,7 @@ executable CountdownGame
                      , cookie
                      , time
                      , parsec
+                     , hspec   == 2.*
   hs-source-dirs:      src
   default-language:    Haskell2010
 
