--- a/CountdownGame.cabal
+++ b/CountdownGame.cabal
@@ -1,4 +1,4 @@
-name:                CountdownGame
+name:                countdown
 version:             0.1.0.0
 synopsis:            Countdown-Game fuer den DeveloperOpenSpace 2015
 -- description:         
@@ -11,6 +11,18 @@ category:            Web
 build-type:          Simple
 -- extra-source-files:  
 cabal-version:       >=1.10
+
+library
+  exposed-modules:     Countdown.Expressions
+                     , Countdown.Parser
+                     , Countdown.Lists
+  -- other-modules:       
+  -- other-extensions:    
+  build-depends:       base >=4.8 && <4.9
+                     , text
+                     , parsec
+  hs-source-dirs:      src
+  default-language:    Haskell2010
 
 executable CountdownGame
   main-is:             Main.hs
@@ -55,6 +67,7 @@ test-suite CountdownTests
   default-language:    
       Haskell2010
   build-depends:       base >=4.8 && <4.9
+                     , countdown
                      , transformers
                      , containers
                      , aeson==0.10.0.0
