--- a/CountdownGame.cabal
+++ b/CountdownGame.cabal
@@ -16,11 +16,16 @@ library
   exposed-modules:     Countdown.Expressions
                      , Countdown.Parser
                      , Countdown.Lists
+                     , Countdown.Game.Players
+                     , Countdown.Game.Challanges
+                     , Countdown.Game.Attempts
   -- other-modules:       
   -- other-extensions:    
   build-depends:       base >=4.8 && <4.9
-                     , text
+                     , aeson==0.10.0.0
+                     , containers
                      , parsec
+                     , text
   hs-source-dirs:      src
   default-language:    Haskell2010
 
@@ -50,7 +55,6 @@ executable CountdownGame
                      , cookie
                      , time
                      , parsec
-                     , hspec   == 2.*
   hs-source-dirs:      src
   default-language:    Haskell2010
 
@@ -61,32 +65,10 @@ test-suite CountdownTests
       -Wall
   hs-source-dirs:
       test
-    , src
   main-is:
       Spec.hs
   default-language:    
       Haskell2010
   build-depends:       base >=4.8 && <4.9
                      , countdown
-                     , transformers
-                     , containers
-                     , aeson==0.10.0.0
-                     , wai
-                     , warp
-                     , http-types
-                     , resourcet
-                     , scotty
-                     , text
-                     , bytestring
-                     , blaze-html
-                     , blaze-builder
-                     , persistent
-                     , persistent-template
-                     , persistent-sqlite
-                     , network
-                     , wai-middleware-static
-                     , wai-extra
-                     , cookie
-                     , time
-                     , parsec
                      , hspec   == 2.*
