--- a/CountdownGame.cabal
+++ b/CountdownGame.cabal
@@ -43,11 +43,11 @@ executable CountdownGame
                      , containers
                      , aeson==0.10.0.0
                      , wai
-                     , warp
+                     , warp==3.1.3.*
                      , http-types
                      , resourcet
                      , monad-logger
-                     , scotty
+                     , scotty==0.10.2
                      , text
                      , bytestring
                      , blaze-html
