Angefangen automatischen Spielablauf in Rounds.hs zu implementieren

--- a/CountdownGame.cabal
+++ b/CountdownGame.cabal
@@ -39,6 +39,7 @@ executable CountdownGame
   -- other-modules:       
   -- other-extensions:    
   build-depends:       base >=4.8 && <4.9
+                     , async
                      , countdown
                      , transformers
                      , containers
