--- a/CountdownGame.cabal
+++ b/CountdownGame.cabal
@@ -38,31 +38,32 @@ executable CountdownGame
   main-is:             Main.hs
   -- other-modules:       
   -- other-extensions:    
-  build-depends:       base >=4.8 && <4.9
+  build-depends:       aeson==0.10.0.0
                      , async
-                     , countdown
-                     , transformers
+                     , base >=4.8 && <4.9
+                     , blaze-builder
+                     , blaze-html
+                     , bytestring
+                     , conduit >= 1.2.5
                      , containers
-                     , aeson==0.10.0.0
-                     , wai
-                     , warp==3.1.3.*
+                     , cookie
+                     , countdown
                      , http-types
-                     , resourcet
                      , monad-logger
+                     , network
+                     , parsec
+                     , persistent
+                     , persistent-sqlite
+                     , persistent-template
+                     , resourcet
                      , scotty==0.10.2
                      , text
-                     , bytestring
-                     , blaze-html
-                     , blaze-builder
-                     , persistent
-                     , persistent-template
-                     , persistent-sqlite
-                     , network
-                     , wai-middleware-static
-                     , wai-extra
-                     , cookie
                      , time
-                     , parsec
+                     , transformers
+                     , wai
+                     , wai-extra
+                     , wai-middleware-static
+                     , warp==3.1.3.*
   hs-source-dirs:      src/web
   default-language:    Haskell2010
 
